--- a/GatewayConference/Base.lproj/Main.storyboard
+++ b/GatewayConference/Base.lproj/Main.storyboard
@@ -101,68 +101,58 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ea-Wj-F8B">
-                                <rect key="frame" x="16" y="28" width="568" height="166"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ea-Wj-F8B">
+                                <rect key="frame" x="16" y="26" width="560" height="170"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="166" id="sje-HI-5Xk"/>
+                                    <constraint firstAttribute="height" constant="170" id="Oru-r2-WsX"/>
+                                    <constraint firstAttribute="width" constant="560" id="Oxx-37-aay"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   aaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4d-Ee-E33">
-                                <rect key="frame" x="17" y="160" width="542" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="510" id="3za-LB-ALc"/>
-                                    <constraint firstAttribute="height" constant="32" id="oIa-zy-qpo"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="3za-LB-ALc"/>
-                                    </mask>
-                                </variation>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   aaatytgyyyfyjg7" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbQ-Kh-ztB">
-                                <rect key="frame" x="17" y="193" width="567" height="58"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="0.63840182109999999" blue="0.41925231600000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4d-Ee-E33">
+                                <rect key="frame" x="29" y="127" width="547" height="27"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
+                                <color key="textColor" red="1" green="0.061956665700000003" blue="0.14208596479999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" showsHorizontalScrollIndicator="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2A-9i-K6f">
-                                <rect key="frame" x="17" y="252" width="567" height="256"/>
+                                <rect key="frame" x="17" y="246" width="559" height="354"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="256" id="qRp-DX-4wK"/>
-                                    <constraint firstAttribute="width" constant="567" id="sMQ-Lm-HgS"/>
+                                    <constraint firstAttribute="width" constant="559" id="sOI-pP-j6s"/>
+                                    <constraint firstAttribute="height" constant="354" id="yWd-jq-ept"/>
                                 </constraints>
                                 <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                 <fontDescription key="fontDescription" name="STHeitiTC-Medium" family="Heiti TC" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="sMQ-Lm-HgS"/>
-                                    </mask>
-                                </variation>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   aaatytgyyyfyjg7" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FbQ-Kh-ztB">
+                                <rect key="frame" x="18" y="218" width="334" height="20"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="334" id="2x2-ed-3wC"/>
+                                    <constraint firstAttribute="height" constant="20" id="8ZG-gj-9zu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="STHeitiTC-Medium" family="Heiti TC" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.63840182109999999" blue="0.41925231600000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="n2A-9i-K6f" firstAttribute="leading" secondItem="FbQ-Kh-ztB" secondAttribute="leading" id="0YH-hX-y11"/>
-                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="trailing" secondItem="u4d-Ee-E33" secondAttribute="trailing" constant="25" id="1Wp-Ca-QwJ"/>
-                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="trailing" secondItem="FbQ-Kh-ztB" secondAttribute="trailing" id="2OQ-VP-544"/>
-                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="centerX" secondItem="mxV-rN-sTz" secondAttribute="centerX" id="2Up-Sw-dF7"/>
-                            <constraint firstItem="Ose-Q3-I9L" firstAttribute="top" secondItem="n2A-9i-K6f" secondAttribute="bottom" constant="92" id="4xU-a1-Dmg"/>
-                            <constraint firstItem="n2A-9i-K6f" firstAttribute="top" secondItem="FbQ-Kh-ztB" secondAttribute="bottom" constant="1" id="GQw-kL-31w"/>
-                            <constraint firstItem="n2A-9i-K6f" firstAttribute="trailing" secondItem="FbQ-Kh-ztB" secondAttribute="trailing" id="JB5-jI-fIr"/>
-                            <constraint firstItem="u4d-Ee-E33" firstAttribute="leading" secondItem="mxV-rN-sTz" secondAttribute="leadingMargin" constant="1" id="LCM-rD-zN5"/>
-                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="top" secondItem="YCy-hY-qCf" secondAttribute="bottom" constant="8" id="NEa-6d-NOf"/>
-                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="leading" secondItem="mxV-rN-sTz" secondAttribute="leadingMargin" id="WEm-Nk-Hdu"/>
-                            <constraint firstAttribute="centerY" secondItem="9ea-Wj-F8B" secondAttribute="centerY" constant="189" id="ckB-2q-QOG"/>
-                            <constraint firstItem="FbQ-Kh-ztB" firstAttribute="top" secondItem="9ea-Wj-F8B" secondAttribute="bottom" constant="-1" id="hjl-RJ-gGQ"/>
-                            <constraint firstItem="FbQ-Kh-ztB" firstAttribute="top" secondItem="u4d-Ee-E33" secondAttribute="bottom" constant="1" id="jZ4-Kz-2Jr"/>
-                            <constraint firstItem="u4d-Ee-E33" firstAttribute="top" secondItem="YCy-hY-qCf" secondAttribute="bottom" constant="140" id="mwF-NF-BqB"/>
-                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="leading" secondItem="FbQ-Kh-ztB" secondAttribute="leading" constant="-1" id="pzc-Ji-8xg"/>
+                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="trailing" secondItem="u4d-Ee-E33" secondAttribute="trailing" id="03T-8j-MNd"/>
+                            <constraint firstItem="FbQ-Kh-ztB" firstAttribute="leading" secondItem="mxV-rN-sTz" secondAttribute="leadingMargin" constant="2" id="4QW-6h-Vwb"/>
+                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="leading" secondItem="u4d-Ee-E33" secondAttribute="leading" constant="-13" id="5W4-ym-vNc"/>
+                            <constraint firstItem="FbQ-Kh-ztB" firstAttribute="top" secondItem="9ea-Wj-F8B" secondAttribute="bottom" constant="22" id="H7j-pI-vkY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9ea-Wj-F8B" secondAttribute="trailing" constant="8" id="HcF-QD-9Ip"/>
+                            <constraint firstItem="n2A-9i-K6f" firstAttribute="bottom" secondItem="Ose-Q3-I9L" secondAttribute="top" id="SRu-hm-Q9q"/>
+                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="top" secondItem="YCy-hY-qCf" secondAttribute="bottom" constant="6" id="Tu4-Jo-Xud"/>
+                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="leading" secondItem="mxV-rN-sTz" secondAttribute="leadingMargin" id="YSq-IH-ncd"/>
+                            <constraint firstItem="u4d-Ee-E33" firstAttribute="top" secondItem="YCy-hY-qCf" secondAttribute="bottom" constant="107" id="iZX-WS-Qxu"/>
+                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="leading" secondItem="mxV-rN-sTz" secondAttribute="leadingMargin" id="miw-nI-URr"/>
+                            <constraint firstItem="n2A-9i-K6f" firstAttribute="top" secondItem="FbQ-Kh-ztB" secondAttribute="bottom" constant="8" id="pLQ-ah-Obk"/>
+                            <constraint firstItem="n2A-9i-K6f" firstAttribute="trailing" secondItem="u4d-Ee-E33" secondAttribute="trailing" id="uJa-cs-y9e"/>
+                            <constraint firstItem="9ea-Wj-F8B" firstAttribute="top" secondItem="YCy-hY-qCf" secondAttribute="bottom" constant="6" id="vVl-3Z-IC0"/>
+                            <constraint firstItem="n2A-9i-K6f" firstAttribute="leading" secondItem="mxV-rN-sTz" secondAttribute="leadingMargin" constant="1" id="w1S-JD-W5y"/>
                         </constraints>
                     </view>
                     <connections>
@@ -174,7 +164,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uSX-Us-l7f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1851" y="-326"/>
+            <point key="canvasLocation" x="1872" y="-346"/>
         </scene>
         <!--Pop Over View Controller-->
         <scene sceneID="Jcb-I6-FGL">
@@ -239,7 +229,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IID-Qd-r9G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1860" y="441"/>
+            <point key="canvasLocation" x="1751" y="441"/>
         </scene>
         <!--Sessions-->
         <scene sceneID="TIa-KT-mkr">
@@ -347,7 +337,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vv4-Lc-bUh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1221" y="3260"/>
+            <point key="canvasLocation" x="1221" y="3417"/>
         </scene>
         <!--POI-->
         <scene sceneID="rrq-bE-7Q9">
