--- a/GatewayConference/MainViewCell.xib
+++ b/GatewayConference/MainViewCell.xib
@@ -7,56 +7,78 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="256" id="KGk-i7-Jjw" customClass="MainViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="256"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="180" id="KGk-i7-Jjw" customClass="MainViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="394" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yys-35-dPx">
-                        <rect key="frame" x="56" y="166" width="208" height="30"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJ1-gD-bZ5">
+                        <rect key="frame" x="72" y="50" width="289" height="90"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npb-40-XgI">
+                                <rect key="frame" x="46" y="8" width="198" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1SQ-S5-VJu">
+                                <rect key="frame" x="46" y="34" width="198" height="21"/>
+                                <fontDescription key="fontDescription" name="STHeitiTC-Medium" family="Heiti TC" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="     Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QU0-iN-mKz">
+                                <rect key="frame" x="20" y="64" width="230" height="21"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.66666666666666663" green="0.47163927199727845" blue="0.41858794806367833" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="208" id="URq-YQ-XeJ"/>
+                            <constraint firstAttribute="height" constant="90" id="LYx-n6-kc1"/>
+                            <constraint firstAttribute="width" constant="267" id="Lfj-JZ-4Pt"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="STHeitiTC-Medium" family="Heiti TC" pointSize="18"/>
-                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bbb" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGf-eT-syY">
-                        <rect key="frame" x="56" y="203" width="208" height="33"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vR1-nZ-2gr">
-                        <rect key="frame" x="85" y="8" width="150" height="150"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Lfj-JZ-4Pt"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DFb-Hj-7Sa">
+                        <rect key="frame" x="20" y="24" width="80" height="80"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="150" id="7W9-IK-eIi"/>
-                            <constraint firstAttribute="width" constant="150" id="SzK-Ho-zqW"/>
+                            <constraint firstAttribute="width" constant="80" id="ep9-1R-GIE"/>
+                            <constraint firstAttribute="height" constant="80" id="f16-DJ-Dm6"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="IGf-eT-syY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="48" id="5rP-kA-d7H"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="IGf-eT-syY" secondAttribute="trailing" constant="48" id="7Wz-2U-UfK"/>
-                    <constraint firstAttribute="centerY" secondItem="IGf-eT-syY" secondAttribute="centerY" constant="-92" id="IqG-Me-AUc"/>
-                    <constraint firstItem="yys-35-dPx" firstAttribute="top" secondItem="vR1-nZ-2gr" secondAttribute="bottom" constant="8" symbolic="YES" id="RNz-Iz-vd8"/>
-                    <constraint firstItem="yys-35-dPx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="48" id="UEH-2c-yOx"/>
-                    <constraint firstItem="IGf-eT-syY" firstAttribute="top" secondItem="yys-35-dPx" secondAttribute="bottom" constant="7" id="Xvr-j5-pdg"/>
-                    <constraint firstAttribute="centerY" secondItem="yys-35-dPx" secondAttribute="centerY" constant="-53.5" id="ZZs-M5-OqW"/>
-                    <constraint firstItem="yys-35-dPx" firstAttribute="trailing" secondItem="IGf-eT-syY" secondAttribute="trailing" id="gIZ-x7-mc5"/>
-                    <constraint firstAttribute="centerX" secondItem="vR1-nZ-2gr" secondAttribute="centerX" id="kIa-E1-Tjg"/>
-                    <constraint firstAttribute="centerY" secondItem="vR1-nZ-2gr" secondAttribute="centerY" constant="45" id="mRA-AM-4P9"/>
-                    <constraint firstItem="yys-35-dPx" firstAttribute="leading" secondItem="IGf-eT-syY" secondAttribute="leading" id="y1I-eD-tyA"/>
+                    <constraint firstItem="IJ1-gD-bZ5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="42" id="AEe-qU-aD0"/>
+                    <constraint firstItem="IJ1-gD-bZ5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="64" id="DY0-MR-JZ8"/>
+                    <constraint firstItem="DFb-Hj-7Sa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="16" id="Eml-bQ-g1J"/>
+                    <constraint firstItem="DFb-Hj-7Sa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="PY8-lc-q1Q"/>
+                    <constraint firstItem="IJ1-gD-bZ5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="64" id="iRP-E4-17l"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="IJ1-gD-bZ5" secondAttribute="trailing" constant="45" id="oTW-Sf-oiq"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="IJ1-gD-bZ5" secondAttribute="trailing" constant="25" id="w4l-3e-8sx"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="iRP-E4-17l"/>
+                        <exclude reference="oTW-Sf-oiq"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="churchLbl" destination="IGf-eT-syY" id="CjE-Tc-1hd"/>
-                <outlet property="nameLbl" destination="yys-35-dPx" id="pwG-X1-pW5"/>
-                <outlet property="profilePic" destination="vR1-nZ-2gr" id="v3K-Ka-ENG"/>
+                <outlet property="bgView" destination="IJ1-gD-bZ5" id="lMl-z7-EE0"/>
+                <outlet property="churchLbl" destination="1SQ-S5-VJu" id="Dtg-gf-l3P"/>
+                <outlet property="nameLbl" destination="npb-40-XgI" id="SIk-J6-K0i"/>
+                <outlet property="profilePic" destination="DFb-Hj-7Sa" id="DaY-jd-Mzj"/>
+                <outlet property="speakerTypeLbl" destination="QU0-iN-mKz" id="BHk-cl-l5z"/>
             </connections>
-            <point key="canvasLocation" x="571.5" y="300"/>
+            <point key="canvasLocation" x="725" y="156"/>
         </tableViewCell>
     </objects>
 </document>
