--- a/GatewayConference/Tablecells/VideosCell/VideosCellTableViewCell.xib
+++ b/GatewayConference/Tablecells/VideosCell/VideosCellTableViewCell.xib
@@ -16,7 +16,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bd-jU-QcY">
-                        <rect key="frame" x="96" y="12" width="266" height="61"/>
+                        <rect key="frame" x="101" y="12" width="266" height="61"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="61" id="qcC-UK-yum"/>
                         </constraints>
@@ -25,15 +25,15 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSm-3c-o0G">
-                        <rect key="frame" x="96" y="81" width="266" height="16"/>
+                        <rect key="frame" x="101" y="81" width="266" height="16"/>
                         <fontDescription key="fontDescription" name="STHeitiSC-Light" family="Heiti SC" pointSize="16"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="clP-ov-5m3">
-                        <rect key="frame" x="8" y="20" width="80" height="80"/>
+                        <rect key="frame" x="8" y="21" width="85" height="78"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="PSW-Z9-HAp"/>
+                            <constraint firstAttribute="width" constant="85" id="PSW-Z9-HAp"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -41,11 +41,11 @@
                     <constraint firstItem="clP-ov-5m3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="1ls-IP-SDT"/>
                     <constraint firstItem="GSm-3c-o0G" firstAttribute="top" secondItem="8bd-jU-QcY" secondAttribute="bottom" constant="8" symbolic="YES" id="EVQ-Xa-vMx"/>
                     <constraint firstItem="clP-ov-5m3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="HQi-Aa-j1S"/>
-                    <constraint firstItem="GSm-3c-o0G" firstAttribute="leading" secondItem="clP-ov-5m3" secondAttribute="trailing" constant="8" symbolic="YES" id="QPg-li-qO7"/>
-                    <constraint firstItem="8bd-jU-QcY" firstAttribute="leading" secondItem="clP-ov-5m3" secondAttribute="trailing" constant="8" symbolic="YES" id="Qoq-Mg-QI9"/>
+                    <constraint firstItem="GSm-3c-o0G" firstAttribute="leading" secondItem="clP-ov-5m3" secondAttribute="trailing" constant="8" id="QPg-li-qO7"/>
+                    <constraint firstItem="8bd-jU-QcY" firstAttribute="leading" secondItem="clP-ov-5m3" secondAttribute="trailing" constant="8" id="Qoq-Mg-QI9"/>
                     <constraint firstItem="8bd-jU-QcY" firstAttribute="trailing" secondItem="GSm-3c-o0G" secondAttribute="trailing" id="Urt-sC-HEO"/>
-                    <constraint firstItem="clP-ov-5m3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="jzQ-HV-oEP"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="8bd-jU-QcY" secondAttribute="trailing" constant="5" id="kux-mD-EI7"/>
+                    <constraint firstItem="clP-ov-5m3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="13" id="jzQ-HV-oEP"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="8bd-jU-QcY" secondAttribute="trailing" id="kux-mD-EI7"/>
                     <constraint firstItem="8bd-jU-QcY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="vyT-o4-94r"/>
                 </constraints>
             </tableViewCellContentView>
@@ -54,7 +54,7 @@
                 <outlet property="imageObj" destination="clP-ov-5m3" id="Pa2-iG-Ogv"/>
                 <outlet property="title" destination="8bd-jU-QcY" id="mfj-mU-37a"/>
             </connections>
-            <point key="canvasLocation" x="421.5" y="362.5"/>
+            <point key="canvasLocation" x="421.5" y="361.5"/>
         </tableViewCell>
     </objects>
 </document>
